--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,42 +1,96 @@
-<!DOCTYPE html>
-<html>
-<head>
-</head>
-<body>
-<div class="navbar navbar-inverse navbar-fixed-top" th:fragment="header">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">My project</a>
-    </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li th:classappend="${module == 'home' ? 'active' : ''}">
-          <a href="#" th:href="@{/}">Home</a>
-        </li>
-        <li th:classappend="${module == 'tasks' ? 'active' : ''}">
-          <a href="#" th:href="@{/task}">Tasks</a>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a href="/signin" th:href="@{/signin}">
-            <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>&nbsp;Sign in
-          </a>
-        </li>
-        <li>
-          <a href="/logout" th:href="@{#}" onclick="$('#form').submit();">
-            <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>&nbsp;Logout
-          </a>
-          <form style="visibility: hidden" id="form" method="post" action="#" th:action="@{/logout}"></form>
-        </li>
-      </ul>
+<nav x-data="{ open: false }" class="bg-linear sticky top-0 z-10" th:fragment="header">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="flex items-center justify-between h-16">
+      <div class="hidden sm:block sm:ml-6">
+        <div class="flex items-center space-x-4 gap-8">
+          <a href="#" class="font-medium hover-color-primary">Заказать</a>
+          <a href="#" class="font-medium color-primary underline-primary">Заказать</a>
+          <a href="#" class="font-medium hover-color-primary">Заказать</a>
+        </div>
+      </div>
+      <div class="flex-shrink-0">
+        <img class="block h-8 w-auto"
+             src="images/logo.png" alt="restaurant_name">
+      </div>
+      <div class="hidden sm:block sm:ml-6">
+        <div class="flex items-center space-x-4 gap-8">
+          <a href="#" class="font-medium hover-color-primary">Заказать</a>
+          <a href="#" class="font-medium hover-color-primary">Заказать</a>
+          <a href="#"
+             class="bgc-primary flex items-center justify-center text-grey-600 px-4 py-2 font-medium">Заказать</a>
+        </div>
+      </div>
+
+      <div class="-mr-2 flex sm:hidden">
+        <!-- Mobile menu button -->
+        <button type="button"
+                class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
+                aria-controls="mobile-menu" @click="open = !open" aria-expanded="false"
+                x-bind:aria-expanded="open.toString()">
+          <span class="sr-only">Open main menu</span>
+          <svg x-description="Icon when menu is closed.
+
+Heroicon name: outline/menu" x-state:on="Menu open" x-state:off="Menu closed" class="block h-6 w-6"
+               :class="{ 'hidden': open, 'block': !(open) }" xmlns="http://www.w3.org/2000/svg" fill="none"
+               viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+          <svg x-description="Icon when menu is open.
+
+Heroicon name: outline/x" x-state:on="Menu open" x-state:off="Menu closed" class="hidden h-6 w-6"
+               :class="{ 'block': open, 'hidden': !(open) }" xmlns="http://www.w3.org/2000/svg" fill="none"
+               viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        </button>
+      </div>
     </div>
   </div>
-</div>
-</body>
-</html>
+
+  <div x-description="Mobile menu, show/hide based on menu state." class="sm:hidden" id="mobile-menu" x-show="open">
+    <div class="px-2 pt-2 pb-3 space-y-1">
+      <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+      <a href="#" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium">Dashboard</a>
+      <a href="#"
+         class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Team</a>
+      <a href="#"
+         class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Projects</a>
+      <a href="#"
+         class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Calendar</a>
+    </div>
+    <div class="pt-4 pb-3 border-t border-gray-700">
+      <div class="flex items-center px-5">
+        <div class="flex-shrink-0">
+          <img class="h-10 w-10 rounded-full"
+               src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=2&amp;w=256&amp;h=256&amp;q=80"
+               alt="">
+        </div>
+        <div class="ml-3">
+          <div class="text-base font-medium text-white">Tom Cook</div>
+          <div class="text-sm font-medium text-gray-400">tom@example.com</div>
+        </div>
+        <button type="button"
+                class="ml-auto flex-shrink-0 bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
+          <span class="sr-only">View notifications</span>
+          <svg class="h-6 w-6" x-description="Heroicon name: outline/bell" xmlns="http://www.w3.org/2000/svg"
+               fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path>
+          </svg>
+        </button>
+      </div>
+      <div class="mt-3 px-2 space-y-1">
+        <a href="#"
+           class="block px-3 py-2 rounded-md text-base font-medium text-gray-400 hover:text-white hover:bg-gray-700">Your
+          Profile</a>
+        <a href="#"
+           class="block px-3 py-2 rounded-md text-base font-medium text-gray-400 hover:text-white hover:bg-gray-700">Settings</a>
+        <a href="#"
+           class="block px-3 py-2 rounded-md text-base font-medium text-gray-400 hover:text-white hover:bg-gray-700">Sign
+          out</a>
+      </div>
+    </div>
+  </div>
+</nav>
