--- a/src/main/resources/static/css/fonts/lumios-marker.scss
+++ b/src/main/resources/static/css/fonts/lumios-marker.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Lumios-Maker';
-  src: url('../../static/fonts/lumios-marker/lumios-marker.woff2');
+  src: url('../fonts/lumios-marker/lumios-marker.woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'Lumios-Maker';
-  src: url('../../static/fonts/lumios-marker/lumios-marker.woff2');
+  src: url('../fonts/lumios-marker/lumios-marker.woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: 'Lumios-Maker';
-  src: url('../../static/fonts/lumios-marker/lumios-marker.woff2');
+  src: url('../fonts/lumios-marker/lumios-marker.woff2');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
   font-family: 'Lumios-Maker';
-  src: url('../../static/fonts/lumios-marker/lumios-marker.woff2');
+  src: url('../fonts/lumios-marker/lumios-marker.woff2');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
