--- a/src/main/resources/static/css/fonts/raleway.scss
+++ b/src/main/resources/static/css/fonts/raleway.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Raleway';
-  src: url('../../static/fonts/raleway/raleway-v28-latin-300.woff2');
+  src: url('../fonts/raleway/raleway-v28-latin-300.woff2');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'Raleway';
-  src: url('../../static/fonts/raleway/raleway-v28-latin-regular.woff2');
+  src: url('../fonts/raleway/raleway-v28-latin-regular.woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: 'Raleway';
-  src: url('../../static/fonts/raleway/raleway-v28-latin-500.woff2');
+  src: url('../fonts/raleway/raleway-v28-latin-500.woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
   font-family: 'Raleway';
-  src: url('../../static/fonts/raleway/raleway-v28-latin-600.woff2');
+  src: url('../fonts/raleway/raleway-v28-latin-600.woff2');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -32,7 +32,7 @@
 
 @font-face {
   font-family: 'Raleway';
-  src: url('../../static/fonts/raleway/raleway-v28-latin-800.woff2');
+  src: url('../fonts/raleway/raleway-v28-latin-800.woff2');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
